Update refund transaction
